Revelação da nav

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         <!-- Navegação principal -->
         <nav class="main-nav" role="navigation" aria-label="Menu principal">
             <ul class="main-nav-list">
-                <li><a href="#langue" class="active">Conheça o LANGUE UFRPE</a></li>
+                <li><a href="#langue">Conheça o LANGUE UFRPE</a></li>
                 <li><a href="#linhas-pesquisa">Linhas de Pesquisa</a></li>
                 <li><a href="#producao-bibliografica">Produção Bibliográfica</a></li>
                 <li><a href="#nosso-time">Nosso Time</a></li>
