--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -62,10 +62,10 @@
         <nav class="main-nav" role="navigation" aria-label="Menu principal">
             <ul class="main-nav-list">
                 <li><a href="#langue">Conheça o LANGUE UFRPE</a></li>
-                <li><a href="#linhas-pesquisa">Linhas de Pesquisa</a></li>
-                <li><a href="#producao-bibliografica">Produção Bibliográfica</a></li>
-                <li><a href="#nosso-time">Nosso Time</a></li>
-                <li><a href="#publicacoes">Publicações</a></li>
+                <li><a href="/linhas-de-pesquisa/">Linhas de Pesquisa</a></li>
+                <li><a href="/producao-bibliografica/">Produção Bibliográfica</a></li>
+                <li><a href="/nosso-time/">Nosso Time</a></li>
+                <li><a href="/publicacoes/">Publicações</a></li>
             </ul>
             <!-- Botão hambúrguer será inserido via JavaScript -->
         </nav>
@@ -121,13 +121,13 @@
             <p>Copyright &copy; 2025 University. All rights reserved.</p>
             <div class="social-media" role="list" aria-label="Redes sociais">
                 <a href="#facebook" aria-label="Facebook" role="listitem">
-                    <img src="https://via.placeholder.com/24x24/ffffff/333333?text=f" alt="Facebook" width="24" height="24">
+                    <img src="{% static 'images/icons/facebook.svg' %}" alt="Facebook" width="24" height="24" style="filter: brightness(0) invert(1);">
                 </a>
-                <a href="#twitter" aria-label="Twitter" role="listitem">
-                    <img src="https://via.placeholder.com/24x24/ffffff/333333?text=t" alt="Twitter" width="24" height="24">
+                <a href="#instagram" aria-label="Instagram" role="listitem">
+                    <img src="{% static 'images/icons/instagram.svg' %}" alt="Instagram" width="24" height="24" style="filter: brightness(0) invert(1);">
                 </a>
                 <a href="#linkedin" aria-label="LinkedIn" role="listitem">
-                    <img src="https://via.placeholder.com/24x24/ffffff/333333?text=in" alt="LinkedIn" width="24" height="24">
+                    <img src="{% static 'images/icons/linkedin.svg' %}" alt="LinkedIn" width="24" height="24" style="filter: brightness(0) invert(1);">
                 </a>
             </div>
         </div>
