--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
         <ul class="main-nav-list">
             <li><a href="{% url 'home' %}">Conheça o LANGUE UFRPE</a></li>
             <li><a href="{% url 'linhas_pesquisa:linhas_pesquisa' %}">Linhas de Pesquisa</a></li>
-            <li><a href="/producao-bibliografica/">Produção Bibliográfica</a></li>
+            <li><a href="/producao-bibliografica/">Produções Bibliográficas</a></li>
             <li><a href="/nosso-time/">Nosso Time</a></li>
             <li><a href="/publicacoes/">Publicações</a></li>
         </ul>
