--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,9 @@
         <ul class="main-nav-list">
             <li><a href="{% url 'home' %}">Conheça o LANGUE UFRPE</a></li>
             <li><a href="{% url 'linhas_pesquisa:linhas_pesquisa' %}">Linhas de Pesquisa</a></li>
-            <li><a href="{% url 'producoes_bibliograficas:producoes_bibliograficas' %}">Produções Bibliográficas</a></li>
+            <li><a href="{% url 'producoes_bibliograficas:producoes_e_publicacoes' %}">Produções e Publicações</a></li>
             <li><a href="/nosso-time/">Nosso Time</a></li>
-            <li><a href="/publicacoes/">Publicações</a></li>
+
         </ul>
     </nav>
 
