--- a/templates/base.html
+++ b/templates/base.html
@@ -42,12 +42,12 @@
 
     <!-- Navegação principal -->
     <nav class="main-nav" role="navigation" aria-label="Menu principal">
-        <ul class="main-nav-list">
-            <li><a href="{% url 'home' %}">Conheça o LANGUE UFRPE</a></li>
-            <li><a href="{% url 'linhas_pesquisa:linhas_pesquisa' %}">Linhas de Pesquisa</a></li>
-            <li><a href="{% url 'producoes_bibliograficas:producoes_e_publicacoes' %}">Produções e Publicações</a></li>
+        <button id="navToggle" class="nav-toggle" aria-label="Abrir menu" aria-expanded="false"></button>
+        <ul class="main-nav-list" id="mainNavList">
+            <li><a href="#langue">Conheça o LANGUE UFRPE</a></li>
+            <li><a href="/linhas-de-pesquisa/">Linhas de Pesquisa</a></li>
+            <li><a href="/producoes-e-publicacoes/">Produções Bibliográficas</a></li>
             <li><a href="/nosso-time/">Nosso Time</a></li>
-
         </ul>
     </nav>
 
