--- a/static/styles/modular/mobile.css
+++ b/static/styles/modular/mobile.css
@@ -72,6 +72,8 @@
         padding: 0 15px;
         min-height: 50px;
         position: relative;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     /* Lista do menu (o dropdown) */
@@ -92,6 +94,7 @@
         padding: 0;
         margin: 0;
         list-style: none;
+        box-sizing: border-box;
     }
 
     /* Estado ativo do menu (expandido) */
