Resolução definitiva do menu em dispositivos móveis

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
             <li><a href="#langue">Conheça o LANGUE UFRPE</a></li>
             <li><a href="/linhas-de-pesquisa/">Linhas de Pesquisa</a></li>
             <li><a href="/producoes-e-publicacoes/">Produções Bibliográficas</a></li>
-            <li><a href="/nosso-time/">Nosso Time</a></li>
+            <li><a href="/galeria/">Galeria</a></li>
         </ul>
     </nav>
 
