--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -60,13 +60,13 @@
         
         <!-- Navegação principal -->
         <nav class="main-nav" role="navigation" aria-label="Menu principal">
-            <ul class="main-nav-list">
+            <button id="navToggle" class="nav-toggle" aria-label="Abrir menu" aria-expanded="false"></button>
+            <ul class="main-nav-list" id="mainNavList">
                 <li><a href="#langue">Conheça o LANGUE UFRPE</a></li>
                 <li><a href="/linhas-de-pesquisa/">Linhas de Pesquisa</a></li>
                 <li><a href="/producoes-e-publicacoes/">Produções Bibliográficas</a></li>
-                <li><a href="/nosso-time/">Nosso Time</a></li>
+                <li><a href="/galeria/">Galeria</a></li>
             </ul>
-            <!-- Botão hambúrguer será inserido via JavaScript -->
         </nav>
     </div>
 
@@ -133,6 +133,7 @@
     </footer>
 
     <!-- JavaScript otimizado -->
+    <script src="{% static 'js/base.js' %}"></script>
     <script src="{% static 'js/home.js'%}"></script>
     
     <!-- Script inline para funcionalidades críticas -->
